[gd_scene load_steps=17 format=3 uid="uid://c5qtsrtjjpnt0"]

[ext_resource type="PackedScene" uid="uid://d7m3r833chkm" path="res://Scenes/Entities/entity.tscn" id="1_5kcag"]
[ext_resource type="Script" uid="uid://osu3xa4a2w72" path="res://Scripts/entities/enemy_script.gd" id="2_f7f5x"]
[ext_resource type="Texture2D" uid="uid://b5w4h7sx06uge" path="res://Graphics/Sprites/goblion.aseprite" id="3_47iv8"]
[ext_resource type="Script" uid="uid://dot6hntkybv0w" path="res://Scripts/resources/potion.gd" id="4_8phrd"]
[ext_resource type="Texture2D" uid="uid://dgf2sa6iqm6k" path="res://Graphics/Sprites/goblion_animation.png" id="5_1udn7"]
[ext_resource type="Texture2D" uid="uid://dfq264joewmbi" path="res://Graphics/temporary_art/white_square.aseprite" id="6_3byi5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("5_1udn7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("5_1udn7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("5_1udn7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("5_1udn7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("5_1udn7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("5_1udn7")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("5_1udn7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("5_1udn7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vt4ob"]
animations = [{
"frames": [{
"duration": 2.3,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_0830c"]
Label/colors/font_color = Color(1, 1, 1, 1)

[node name="Enemy" instance=ExtResource("1_5kcag")]
script = ExtResource("2_f7f5x")
sprite = ExtResource("3_47iv8")
gold_range = Array[int]([1, 3])
xp_given = 2
potions = Array[ExtResource("4_8phrd")]([])
max_health = 5

[node name="Enemy_sprite" type="AnimatedSprite2D" parent="." index="0"]
position = Vector2(76, 68)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_vt4ob")
autoplay = "default"
frame_progress = 0.17742503

[node name="Info_button" type="Button" parent="." index="1"]
offset_left = 11.0
offset_top = 108.0
offset_right = 162.0
offset_bottom = 214.0

[node name="info_panel" type="Panel" parent="." index="2"]
z_index = 2
offset_left = 175.0
offset_top = 17.0
offset_right = 328.0
offset_bottom = 121.0
scale = Vector2(1e-05, 1e-05)

[node name="potion_name" type="Label" parent="info_panel" index="0"]
z_index = 2
layout_mode = 0
offset_right = 115.0
offset_bottom = 29.0
theme = SubResource("Theme_0830c")

[node name="Effects" type="Control" parent="." index="3"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Burn" type="Control" parent="Effects" index="0"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Burn_icon" type="TextureRect" parent="Effects/Burn" index="0"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 11.0
offset_top = 110.0
offset_right = 51.0
offset_bottom = 150.0
texture = ExtResource("6_3byi5")

[node name="Burn_label" type="Label" parent="Effects/Burn" index="1"]
layout_mode = 0
offset_left = 23.0
offset_top = 121.0
offset_right = 65.0
offset_bottom = 144.0
text = "0"

[node name="Poison" type="Control" parent="Effects" index="1"]
anchors_preset = 0
offset_left = 60.0
offset_top = 1.0
offset_right = 100.0
offset_bottom = 41.0

[node name="Poison_icon" type="TextureRect" parent="Effects/Poison" index="0"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 6.0
offset_top = 108.0
offset_right = 46.0
offset_bottom = 148.0
texture = ExtResource("6_3byi5")

[node name="Poison_label" type="Label" parent="Effects/Poison" index="1"]
layout_mode = 0
offset_left = 19.0
offset_top = 120.0
offset_right = 61.0
offset_bottom = 143.0
text = "0"

[node name="Rejuvination" type="Control" parent="Effects" index="2"]
anchors_preset = 0
offset_left = 113.0
offset_top = 2.0
offset_right = 153.0
offset_bottom = 42.0

[node name="Rejuvination_icon" type="TextureRect" parent="Effects/Rejuvination" index="0"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 108.0
offset_right = 43.0
offset_bottom = 148.0
texture = ExtResource("6_3byi5")

[node name="Rejuvination_label" type="Label" parent="Effects/Rejuvination" index="1"]
layout_mode = 0
offset_left = 18.0
offset_top = 117.0
offset_right = 60.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="Health" type="Control" parent="Effects" index="3"]
anchors_preset = 0
offset_left = 113.0
offset_top = 2.0
offset_right = 153.0
offset_bottom = 42.0

[node name="Health_label" type="Label" parent="Effects/Health" index="0"]
layout_mode = 0
offset_left = -54.0
offset_top = 25.0
offset_right = -12.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[connection signal="mouse_entered" from="Info_button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Info_button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Info_button" to="." method="_on_button_pressed"]
