[gd_scene load_steps=45 format=3 uid="uid://dv80o7a0f4uou"]

[ext_resource type="Script" uid="uid://osu3xa4a2w72" path="res://Scripts/entities/enemy_script.gd" id="1_qlp5k"]
[ext_resource type="Shader" uid="uid://blh7tkq8mljce" path="res://entities/'enemies/shaders/enemy_burn_outline.gdshader" id="2_yslwt"]
[ext_resource type="Texture2D" uid="uid://bnc2bu1d0mfjw" path="res://Graphics/Sprites/goblion_sheet.png" id="3_u1qr2"]
[ext_resource type="Shader" uid="uid://drcfuw3nx40i0" path="res://Graphics/Shaders/3DOutline.gdshader" id="4_cyjlv"]
[ext_resource type="SpriteFrames" uid="uid://bjgpr5kuqynbq" path="res://Graphics/Sprites/Rendered_FX/fire/fire_anim.tres" id="5_mijyd"]
[ext_resource type="Shader" uid="uid://k3col6bhrsdw" path="res://Graphics/Shaders/enemy_culling.gdshader" id="6_fwy5w"]
[ext_resource type="PackedScene" uid="uid://dsrc1ojniam15" path="res://entities/health_bar/health_bar.tscn" id="7_t224t"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4oths"]
frequency = 0.0264
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yrgos"]
noise = SubResource("FastNoiseLite_4oths")
seamless = true
in_3d_space = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0s7u1"]
render_priority = 10
shader = ExtResource("2_yslwt")
shader_parameter/sprite_texture = ExtResource("3_u1qr2")
shader_parameter/hot_color = Color(1, 0.6, 0, 1)
shader_parameter/cool_color = Color(1, 0, 0, 1)
shader_parameter/noise = SubResource("NoiseTexture2D_yrgos")
shader_parameter/intensity = 0.0
shader_parameter/billboard = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yrgos"]
render_priority = 20
next_pass = SubResource("ShaderMaterial_0s7u1")
shader = ExtResource("4_cyjlv")
shader_parameter/sprite_texture = ExtResource("3_u1qr2")
shader_parameter/billboard = true
shader_parameter/line_color = Color(1, 1, 1, 0)
shader_parameter/opacity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1hpgq"]
atlas = ExtResource("3_u1qr2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv5al"]
atlas = ExtResource("3_u1qr2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xgx5"]
atlas = ExtResource("3_u1qr2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fywcl"]
atlas = ExtResource("3_u1qr2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n07rk"]
atlas = ExtResource("3_u1qr2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8ss"]
atlas = ExtResource("3_u1qr2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35lce"]
atlas = ExtResource("3_u1qr2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t141v"]
atlas = ExtResource("3_u1qr2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pw3mf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hpgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv5al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xgx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fywcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n07rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35lce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t141v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_qlp5k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hpgq"]
shader = ExtResource("6_fwy5w")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5faar"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4oths"]
blend_mode = 4

[sub_resource type="Gradient" id="Gradient_1hpgq"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5505319, 1)
colors = PackedColorArray(0.0756, 0.14, 0.10458, 0.2509804, 0.08602001, 0.17, 0.0816, 0.21176471, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yv5al"]
gradient = SubResource("Gradient_1hpgq")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.48290598)

[sub_resource type="Curve" id="Curve_1hpgq"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(0.17253523, 1), 0.0, 0.0, 0, 0, Vector2(0.3380282, -1), 0.0, 0.0, 0, 0, Vector2(0.50000006, 1), 0.0, 0.0, 0, 0, Vector2(0.665493, -1), 0.0, 0.0, 0, 0, Vector2(0.8345071, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 7

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_yv5al"]
curve_x = SubResource("Curve_1hpgq")

[sub_resource type="Curve" id="Curve_2xgx5"]
_limits = [-2.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_fywcl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_n07rk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_1j8ss"]
curve_x = SubResource("Curve_2xgx5")
curve_y = SubResource("Curve_fywcl")
curve_z = SubResource("Curve_n07rk")

[sub_resource type="Curve" id="Curve_yrgos"]
_data = [Vector2(0, 1), 0.0, -8.985924, 0, 0, Vector2(0.32042253, 0), -0.48755684, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0s7u1"]
texture_mode = 1
curve = SubResource("Curve_yrgos")

[sub_resource type="Curve" id="Curve_4oths"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25352114, 1), 0.0, -0.8251223, 0, 0, Vector2(0.7067039, 0.8089888), -0.030007647, -0.030007647, 0, 0, Vector2(1, 0.022471905), -12.433073, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_yrgos"]
curve = SubResource("Curve_4oths")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4oths"]
particle_flag_disable_z = true
angle_min = -100.399994
angle_max = 57.30001
direction = Vector3(0, -1, 0)
spread = 0.0
flatness = 1.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
angular_velocity_min = 111.79998
angular_velocity_max = 228.07997
directional_velocity_min = -1.6093254e-05
directional_velocity_max = -1.6093254e-05
directional_velocity_curve = SubResource("CurveXYZTexture_yv5al")
orbit_velocity_curve = SubResource("CurveXYZTexture_1j8ss")
radial_velocity_min = 25.219976
radial_velocity_max = 61.329975
radial_velocity_curve = SubResource("CurveTexture_0s7u1")
gravity = Vector3(0, -15, 0)
scale_min = 0.7
scale_curve = SubResource("CurveTexture_yrgos")
hue_variation_min = -0.08000002
hue_variation_max = 0.029999977
turbulence_noise_strength = 20.0
turbulence_noise_scale = 0.227
turbulence_noise_speed_random = 1.97
turbulence_influence_min = 0.42100003
turbulence_influence_max = 0.42600003
sub_emitter_mode = 4
sub_emitter_amount_at_start = 1

[sub_resource type="Gradient" id="Gradient_4oths"]
offsets = PackedFloat32Array(0.78807944, 1)
colors = PackedColorArray(0.17955332, 0.46, 0.1748, 0.039215688, 0.2832, 0.59, 0.3650133, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yrgos"]
gradient = SubResource("Gradient_4oths")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.48290598)

[sub_resource type="Curve" id="Curve_0s7u1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25139666, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.340605, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1hpgq"]
curve = SubResource("Curve_0s7u1")

[sub_resource type="Curve" id="Curve_yv5al"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.24022345, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2xgx5"]
curve = SubResource("Curve_yv5al")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0s7u1"]
particle_flag_disable_z = true
spread = 180.0
radial_velocity_min = 4.9999776
radial_velocity_max = 4.9999776
radial_velocity_curve = SubResource("CurveTexture_2xgx5")
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_1hpgq")

[node name="3dEnemy" type="Node3D" node_paths=PackedStringArray("fire_origin", "fire_visuals", "fire_light", "poison_visuals")]
script = ExtResource("1_qlp5k")
fire_origin = NodePath("VFX/FireOrigin")
fire_visuals = NodePath("VFX/FireOrigin/FireSprite")
fire_light = NodePath("VFX/FireLight")
poison_visuals = NodePath("Target/PoisonBubble")
max_health = 5.0

[node name="Enemy_sprite" type="AnimatedSprite3D" parent="."]
material_overlay = SubResource("ShaderMaterial_yrgos")
offset = Vector2(2, 11)
pixel_size = 0.04
billboard = 1
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_pw3mf")
frame_progress = 0.8527279

[node name="gui_origin" type="Marker3D" parent="Enemy_sprite"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.2, 0)

[node name="attack_origin" type="Marker3D" parent="Enemy_sprite"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.013, 0.3, 0)

[node name="VFX" type="Node3D" parent="."]

[node name="FireOrigin" type="Node3D" parent="VFX"]

[node name="FireSprite" type="AnimatedSprite3D" parent="VFX/FireOrigin"]
layers = 4096
lod_bias = 0.001
offset = Vector2(0, 27)
pixel_size = 0.04
billboard = 1
texture_filter = 0
render_priority = -3
sprite_frames = ExtResource("5_mijyd")
autoplay = "default"
frame_progress = 0.68495965

[node name="FireLight" type="OmniLight3D" parent="VFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06765407, -0.32416326)
layers = 1025
light_color = Color(0.87, 0.08700002, 0, 1)
light_energy = 0.294
light_size = 1.0
light_specular = 16.0
omni_range = 2.124
omni_attenuation = 2.705

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_qlp5k")

[node name="Effects" type="Control" parent="."]
visible = false
visibility_layer = 4097
material = SubResource("ShaderMaterial_1hpgq")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Health_bar" parent="Effects" instance=ExtResource("7_t224t")]
visibility_layer = 4096
custom_minimum_size = Vector2(50, 8)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="Target" type="Control" parent="."]
visibility_layer = 4096
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="Target"]
visible = false
visibility_layer = 4096
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -15.0
offset_right = 12.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/hover = SubResource("StyleBoxFlat_5faar")

[node name="PoisonBubble" type="GPUParticles2D" parent="Target"]
z_index = 10
material = SubResource("CanvasItemMaterial_4oths")
scale = Vector2(1.745, 1.745)
emitting = false
amount = 100
sub_emitter = NodePath("PoisonCloud")
texture = SubResource("GradientTexture2D_yv5al")
lifetime = 3.0
local_coords = true
trail_lifetime = 0.77
trail_sections = 2
trail_section_subdivisions = 3
process_material = SubResource("ParticleProcessMaterial_4oths")

[node name="PoisonCloud" type="GPUParticles2D" parent="Target/PoisonBubble"]
z_index = -20
emitting = false
amount = 2
texture = SubResource("GradientTexture2D_yrgos")
lifetime = 4.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_0s7u1")

[connection signal="mouse_entered" from="Area3D" to="." method="update_hover" binds= [true]]
[connection signal="mouse_exited" from="Area3D" to="." method="update_hover" binds= [false]]
[connection signal="mouse_entered" from="Target/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Target/Button" to="." method="_on_button_pressed"]
